fix: screen alignments

--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -602,7 +602,7 @@ strong {
 -----------------------------------------*/
 
 .clients-item-height {
-  height: 50px;
+  height: 80px;
 }
 
 .clients-image {
